@@ -1,32 +1,22 @@
 module Wrath
-  class NetworkOverlay
-    include Log
-
+  class NetworkOverlay < Overlay
     MAX_HISTORY = 300
     SCALE = 250.0
     SENT_COLOR = Color.rgba(0, 0, 255, 100)
     RECEIVED_COLOR = Color.rgba(0, 255, 0, 100)
     TEXT_COLOR = Color.rgba(255, 255, 255, 100)
 
-    class Clock < BasicGameObject
-      trait :timer
-    end
-
     def initialize(network)
+      super()
+
       @network = network
       @network.reset_counters
 
-      @clock = Clock.new
-      @clock.every(1000) { count }
+      every(1000) { count }
 
-      @visible = false
       @font = Font[15]
 
       @seconds = [] # Recorded values from each second.
-    end
-
-    def toggle
-      @visible = (not @visible)
     end
 
     def average_over(time, y)
@@ -50,26 +40,20 @@ module Wrath
     end
 
     def draw
-      if @visible
-        @font.draw "Over(s)  Sent(b/s | pkt/s) Received(b/s | pkt/s)", 0, $window.height - 80, ZOrder::GUI, 1, 1, TEXT_COLOR
+      @font.draw "Over(s)  Sent(b/s | pkt/s) Received(b/s | pkt/s)", 0, $window.height - 80, ZOrder::GUI, 1, 1, TEXT_COLOR
 
-        unless @seconds.empty?
-          average_over(1, $window.height - 60)
-          average_over(10, $window.height - 40)
-          average_over(60, $window.height - 20)
+      unless @seconds.empty?
+        average_over(1, $window.height - 60)
+        average_over(10, $window.height - 40)
+        average_over(60, $window.height - 20)
 
-          pixel = $window.pixel
-          @seconds.each_with_index do |data, i|
-            sent_height, received_height = data[:bytes_sent] / SCALE, data[:bytes_received] / SCALE
-            pixel.draw i, 400 - sent_height, ZOrder::GUI, 1, sent_height, SENT_COLOR
-            pixel.draw i, 400 - received_height, ZOrder::GUI, 1, received_height, RECEIVED_COLOR
-          end
+        pixel = $window.pixel
+        @seconds.each_with_index do |data, i|
+          sent_height, received_height = data[:bytes_sent] / SCALE, data[:bytes_received] / SCALE
+          pixel.draw i, 400 - sent_height, ZOrder::GUI, 1, sent_height, SENT_COLOR
+          pixel.draw i, 400 - received_height, ZOrder::GUI, 1, received_height, RECEIVED_COLOR
         end
       end
-    end
-
-    def update
-      @clock.update_trait
     end
 
     def count
