@@ -1,6 +1,7 @@
 === CHANGELOG ===
 
 Next release
+  * Network stats and fps overlays now on 'n' and 'f' respectively and can be configured (FPS no longer in title bar).
   * Slowed down preparation of level, so neither host nor client gets overwhelmed and freezes up.
   * Added i18n support, including translations of the game into 1337 and Piratical English.
   * Fixed: Completion times for all achievements already gained, are set to the current time whenever the application is started.
